--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ $(document).ready(function() {
 		console.log(answers);
 	}
 
-	$.getJSON('cities.json', function(json) {
+	$.getJSON('cities-hun.json', function(json) {
 		$.each(json, function(key, val) {
 			qas = val;
         	//$.each(val, function(key, val) {
